validación de vendedor y cliente

--- a/views/abonos.ejs
+++ b/views/abonos.ejs
@@ -110,18 +110,18 @@
                     <!-- Botones de acciones -->
                     <button
                       type="button"
-                      class="btn btn-success"
+                      class="btn btn-primary mb-2"
                       title="Abonar"
                     >
-                      Abonar
+                      <img src="/resources/images/abonar.png" style="height: 25px;width: 30px;" alt="Abonar">
                     </button>
                     <button
                       type="button"
-                      class="btn btn-danger"
+                      class="btn btn-warning"
                       title="Detalles de abonos"
                       onclick="mostrarPanelHistorialAbonosUnico()"
                     >
-                      Detalles de abonos
+                      <img src="/resources/images/abonoDetalle.png" style="height: 25px;width: 30px;" alt="Detalles de abonos">
                     </button>
                   </td>
                 </tr>
