--- a/views/editVendedor.ejs
+++ b/views/editVendedor.ejs
@@ -21,65 +21,72 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h2>Datos del Vendedor</h2>
-            <form action="/UpdateVendedor" method="post">
+            <form action="/UpdateVendedor" method="post" class="needs-validation position-relative" novalidate>
                 <div class="mb-2">
                   <label for="nombre" class="form-label">Nombres</label>
                   <input type="text" class="form-control" id="Id_cl" name="Id_vd" value="<%= vendedor.Id_Persona %>" hidden>
-                  <input type="text" class="form-control" id="nombre" name="Nombre_vd" value="<%= vendedor.Nombre %>">
+                  <input type="text" class="form-control" id="nombre" name="Nombre_vd" value="<%= vendedor.Nombre %>" required>
+                  <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Nombre</div>
                 </div>
                 <div class="mb-2">
                   <label for="apellido" class="form-label">Apellidos</label>
-                  <input type="text" class="form-control" id="apellido" name="Apellido_vd" value="<%= vendedor.Apellido %>">
+                  <input type="text" class="form-control" id="apellido" name="Apellido_vd" value="<%= vendedor.Apellido %>" required>
+                  <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número Apellido</div>
                 </div>
                 <div class="mb-2">
                     <label for="Telefono" class="form-label">Telefono</label>
-                    <input type="number" class="form-control" id="Telefono" name="Telefono_vd" value="<%= vendedor.Telefono %>">
+                    <input type="number" class="form-control" id="Telefono" name="Telefono_vd" value="<%= vendedor.Telefono %>" required>
+                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número teléfonico</div>
                   </div>
                   <div class="mb-2">
                     <label for="Cedula" class="form-label">Cedula</label>
-                    <input type="text" class="form-control" id="Cedula" name="Cedula_vd" value="<%= vendedor.Cedula %>">
+                    <input type="text" class="form-control" id="Cedula" name="Cedula_vd" value="<%= vendedor.Cedula %>" required>
+                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de cédula</div>
                   </div>
                   <div class="mb-1">
                     <label for="Residencia" class="form-label">Dirección</label>
+                    <select class="form-select" aria-label="Distrito" name="Distrito_vd" required>
+                      <option selected disabled value="">Seleccionar Distrito...</option>
+  
+                      <% if (vendedor.Distrito == 'I') { %>
+                        <option value="I" selected>Distrito I</option>
+                      <% } else { %> <option value="I">Distrito I</option> <% } %> 
+  
+                      <% if (vendedor.Distrito == 'II') { %>
+                        <option value="II" selected>Distrito II</option>
+                      <% } else { %> <option value="II">Distrito II</option><% } %> 
+  
+                      <% if (vendedor.Distrito == 'III') { %>
+                        <option value="III" selected>Distrito III</option>
+                      <% } else { %> <option value="III">Distrito III</option> <% } %> 
+                      
+                      <% if (vendedor.Distrito == 'IV') { %>
+                        <option value="IV" selected>Distrito IV</option>
+                      <% } else { %> <option value="IV">Distrito IV</option> <% } %> 
+  
+                      <% if (vendedor.Distrito == 'V') { %>
+                        <option value="V" selected>Distrito V</option>
+                      <% } else { %> <option value="V">Distrito V</option> <% } %> 
+  
+                      <% if (vendedor.Distrito == 'VI') { %>
+                        <option value="VI" selected>Distrito VI</option>
+                      <% } else { %> <option value="VI">Distrito VI</option> <% } %>  
+  
+                      <% if (vendedor.Distrito == 'VII') { %>
+                        <option value="VII" selected>Distrito VII</option>
+                      <% } else { %> <option value="VII">Distrito VII</option> <% } %>  
+                    </select>
+                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Distrito</div>
                   </div>
-                  <select class="form-select" aria-label="Distrito" name="Distrito_vd">
-                    <option>Seleccionar Distrito</option>
-
-                    <% if (vendedor.Distrito == 'I') { %>
-                      <option value="I" selected>Distrito I</option>
-                    <% } else { %> <option value="I">Distrito I</option> <% } %> 
-
-                    <% if (vendedor.Distrito == 'II') { %>
-                      <option value="II" selected>Distrito II</option>
-                    <% } else { %> <option value="II">Distrito II</option><% } %> 
-
-                    <% if (vendedor.Distrito == 'III') { %>
-                      <option value="III" selected>Distrito III</option>
-                    <% } else { %> <option value="III">Distrito III</option> <% } %> 
-                    
-                    <% if (vendedor.Distrito == 'IV') { %>
-                      <option value="IV" selected>Distrito IV</option>
-                    <% } else { %> <option value="IV">Distrito IV</option> <% } %> 
-
-                    <% if (vendedor.Distrito == 'V') { %>
-                      <option value="V" selected>Distrito V</option>
-                    <% } else { %> <option value="V">Distrito V</option> <% } %> 
-
-                    <% if (vendedor.Distrito == 'VI') { %>
-                      <option value="VI" selected>Distrito VI</option>
-                    <% } else { %> <option value="VI">Distrito VI</option> <% } %>  
-
-                    <% if (vendedor.Distrito == 'VII') { %>
-                      <option value="VII" selected>Distrito VII</option>
-                    <% } else { %> <option value="VII">Distrito VII</option> <% } %>  
-                  </select>
+                  
                   <div class="mb-2 dx-2">
                     <label for="Residencia" class="form-label">Zona de Residencia</label>
-                    <input type="text" class="form-control" id="Residencia" name="Residencia_vd" value="<%= vendedor.Zona_Residencia %>" placeholder="Z. Residencia">
+                    <input type="text" class="form-control" id="Residencia" name="Residencia_vd" value="<%= vendedor.Zona_Residencia %>" placeholder="Z. Residencia" required>
+                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario la zona de residencia</div>
                   </div>
                   <div class="mb-2">
                     <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
-                    <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_vd" placeholder="P. Referencia" value="<%= vendedor.Punto_Referencia %>" >
+                    <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_vd" placeholder="P. Referencia" value="<%= vendedor.Punto_Referencia %>">
                   </div>
                   <div class="mb-2">
                     <label for="Distancia" class="form-label">Distancia</label>
@@ -87,7 +94,8 @@
                   </div>
                   <div class="mb-2">
                     <label for="casa" class="form-label">Numero de casa</label>
-                    <input type="text" class="form-control" id="casa"  name="Casa_vd" placeholder="N. Casa" value="<%= vendedor.Casa %>" >
+                    <input type="text" class="form-control" id="casa"  name="Casa_vd" placeholder="N. Casa" value="<%= vendedor.Casa %>"  required>
+                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de Casa</div>
                   </div>
                   <div class="d-grid gap-2 mb-3">
                     <button type="submit" class="btn btn-success" title="Editar">Editar</button>
@@ -130,6 +138,29 @@
     <script src="/resources/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
  
+    <!-- codigo js para las validaciones-->
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (() => {
+        'use strict'
+  
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        const forms = document.querySelectorAll('.needs-validation')
+  
+        // Loop over them and prevent submission
+        Array.from(forms).forEach(form => {
+          form.addEventListener('submit', event => {
+            if (!form.checkValidity()) {
+              event.preventDefault()
+              event.stopPropagation()
+            }
+  
+            form.classList.add('was-validated')
+          }, false)
+        })
+      })()
+    </script>
+
     <% if (typeof alert != "undefined")  { %>
       <script>
           Swal.fire({
