--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -562,14 +562,14 @@
               <div
                 id="panelDetalleVentas"
 
-                class="panel-flotante"
+                class="panel-flotante panel-ancho"
                 style="display: none"
               >
-                <div class="panel-content">
-                  <h4>Historial de abonos</h4>
+                <div class="panel-content ">
+                  <h4>Detalle de esta venta</h4>
 
                   <div style="max-height: 300px; overflow-y: auto">
-                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                       <table class="table" id="tablacliente">
                         <thead>
                           <tr>
@@ -590,8 +590,8 @@
                             <tr>
                               <th class="centrado">Producto</th>
                               <th class="centrado">Cantidad Producto</th>
+                              <th class="centrado"></th>
                               <th class="centrado">Precio</th>
-                              <th class="centrado">Accion</th>
                             </tr>
                           </thead>
                         </tbody>
@@ -600,34 +600,15 @@
                           <tr>
                             <td class="centrado">Zapatos</td>
                             <td class="centrado">3</td>
+                            <td class="centrado"></td>
                             <td class="centrado">150 C$</td>
-                            <td class="centrado">
-                              <div class="centrado">
-                                <div
-                                  class="d-flex justify-content-center align-items-center"
-                                >
-                                  <input
-                                    type="number"
-                                    class="form-control form-control-sm me-2"
-                                    style="width: 3rem"
-                                  />
-                                  <button
-                                    type="button"
-                                    class="btn btn-danger px-3"
-                                    title="Eliminar"
-                                  >
-                                    <i class="fa-solid fa-trash"></i>
-                                  </button>
-                                </div>
-                              </div>
-                            </td>
                           </tr>
                         </tbody>
                         <thead>
                           <th></th>
                           <th></th>
                           <th></th>
-                          <th class="centrado">Cantidad Total</th>
+                          <th class="centrado">SubTotal</th>
                         </thead>
                         <tbody>
                           <td></td>
@@ -636,77 +617,10 @@
                           <td class="centrado">450 C$</td>
                         </tbody>
                       </table>
-                  <h4>Detalles de venta</h4>
-                  <nav class="navbar bg-body-tertiary"></nav>
-                  <div style="max-height: 300px; overflow-y: auto">
-                    <div class="row">
-                      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <table class="table" id="tablacliente">
-                          <thead>
-                            <tr>
-                              <th class="centrado">Cliente</th>
-                              <th class="centrado">Vendedor</th>
-                              <th></th>
-                              <th class="centrado">Fecha</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td class="centrado">Mateo</td>
-                              <td class="centrado">Jonathan</td>
-                              <td></td>
-                              <td class="centrado">13/04/2024</td>
-                            </tr>
-                            <thead>
-                              <tr>
-                                <th class="centrado">Producto</th>
-                                <th class="centrado">
-                                  Cantidad Producto
-                                </th>
-                                <th class="centrado">Precio</th>
-                                
-                              </tr>
-                            </thead>
-                          </tbody>
-
-                          <tbody>
-                            <tr>
-                              <td class="centrado">Zapatos</td>
-                              <td class="centrado">3</td>
-                              <td class="centrado">150 C$</td>
-                              <td class="centrado">
-                                <div class="centrado">
-                                  <div
-                                    class="d-flex justify-content-center align-items-center"
-                                  >
-                                  </div>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                          <thead>
-                            <th></th>
-                            <th></th>
-                            <th class="centrado">Cantidad Total</th>
-                            <th></th>
-                            
-                          </thead>
-                          <tbody>
-                            <td></td>
-                            <td></td>
-                            <td class="centrado">450 C$</td>
-                            <td></td>
-                            
-                          </tbody>
-                        </table>
-                      </div>
-                      
-                    </div>
-                  </div>
                   <button
                     type="button"
                     class="btn btn-danger"
-                    onclick="cerrarPanelHistorialAbonos()"
+                    onclick="cerrarDetallesVenta()"
                   >
                     Cerrar
                   </button>
@@ -714,7 +628,7 @@
                     <!-- onclick="cerrarDetallesVenta()"
                   >
                     Cerrar -->
-                  </button>
+                  
                 </div>
               </div>
             </div>
