--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -128,7 +128,7 @@
                                   </div>
 
                                   <div class="mb-3">
-                                    <p class="text-success" id="client_name" hidden></p>
+                                    <p class="text-success" id="client_name"  style="font-weight: bold;" hidden></p>
                                   </div>
             
                                   <label for="CedulaVendedor" class="form-label" >Digite la Cedula del vendedor</label>
@@ -138,7 +138,7 @@
                                   </div>
 
                                   <div class="mb-3">
-                                    <p class="text-success" id="vendedor_name" hidden></p>
+                                    <p class="text-success" id="vendedor_name" hidden style="font-weight: bold;"></p>
                                   </div>
                                      
                                   <div class="mb-3">
