Commit 7 Cambios Abonos y ventas

--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clientes Comercial Jennifer</title>
     <!-- FA pencil-->
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
     <link
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
@@ -343,7 +344,7 @@
                         /></svg
                     ></a>
 
-                    <a
+                   <!--  <a
                       href="#"
                       class="btn btn-danger"
                       title="Eliminar"
@@ -362,7 +363,7 @@
                         <path
                           d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
                         /></svg
-                    ></a>
+                    ></a> -->
 
                     <button
                       type="button"
@@ -431,11 +432,7 @@
 
     <script src="/resources/js/ScriptClient.js"></script>
     <script src="/resources/js/script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- codigo js para las validaciones-->
