--- a/views/abonos.ejs
+++ b/views/abonos.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abonos</title>
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +31,7 @@
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <div class="px-3 py-2">
               <h4 style="display: flex; justify-content: space-between;">Seleccione la venta a la que desea realizar abono
-                <button type="button" class="btn btn-success" title="Historial" onclick="mostrarPanelHistorialAbonos()"><i class="fa-solid fa-list"></i>Listar historial de abonos</button>
+                <!-- <button type="button" class="btn btn-success" title="Historial" onclick="mostrarPanelHistorialAbonos()"><i class="fa-solid fa-list"></i>Listar historial de abonos</button> -->
               </h4>
             </div>
             <div id="panelHistorialAbonos" class="panel-flotante" style="display: none;">
@@ -80,7 +81,8 @@
                 </form>
               </div>
             </nav>
-            <table class="table primary px-3">
+
+            <table id="TablaAbonos" class="table primary px-3">
               <thead>
                 <tr>
                   <th class="centrado">Nombre del cliente</th>
@@ -88,51 +90,49 @@
                   <th class="centrado">Fecha de venta</th>
                   <th class="centrado">Plazo de compra</th>
                   <th class="centrado">Frecuencia de abono</th>
-                  <th class="centrado">Cantidad total</th>
+                  <th class="centrado">Total</th>
                   <th class="centrado">Saldo restante</th>
                   <th class="centrado">Acciones</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td class="centrado">Cliente A</td>
-                  <td class="centrado">Vendedor X</td>
-                  <td class="centrado">2024-04-20</td>
-                  <td class="centrado">30 días</td>
-                  <td class="centrado">Semanal</td>
-                  <td class="centrado">$500.00</td>
-                  <td class="centrado">$250.00</td>
-                  <td class="centrado">
-                    <button type="button" class="btn btn-success" title="Abonar" onclick= "mostrarPanelAbono()"><i class="fa-solid fa-money-check-dollar"></i></button>
-                    <button
-                      type="button"
-                      class="btn btn-warning"
-                      title="Detalles de abonos"
-                      onclick="mostrarPanelHistorialAbonosUnico()"
-                    >
-                    </button>
-                  </td>
-                </tr>
+                <% Ventas_Credito.forEach((venta) => { %>
+                  <tr>
+                    <td class="centrado"><%= venta.Nombre_Cliente %></td>
+                    <td class="centrado"><%= venta.Nombre_Vendedor %></td>
+                    <td class="centrado"><%= venta.Fecha_Venta %></td>
+                    <td class="centrado"><%= venta.Plazo_Compra %></td>
+                    <td class="centrado"><%= venta.Frecuencia_Abonos %></td>
+                    <td class="centrado">C$ <%= venta.Total_Venta %></td>
+                    <td class="centrado">C$ <%= venta.Saldo_Restante %></td>
+                    <td class="centrado">
+                      <button type="button" class="btn btn-success" title="Abonar" onclick= "mostrarPanelAbono('<%= venta.Id_Venta %>','<%= venta.Nombre_Cliente %>','<%= venta.Nombre_Vendedor %>')"><i class="fa-solid fa-money-check-dollar"></i></button>
+                      <button type="button" class="btn btn-primary" title="Detalles de abonos" onclick="mostrarPanelHistorialAbonosUnico('<%= venta.Id_Venta %>','<%= venta.Nombre_Cliente %>','<%= venta.Nombre_Vendedor %>')"><i class="fa-solid fa-receipt fa-lg" style="color: #ffffff;"></i></button>
+                    </td>
+                  </tr>
+                <% }) %>
               </tbody>
             </table>
+
             <div id="panelAbono" class="panel-flotante" style="display: none">
               <div class="panel-content">
-                <h4>Realizar abono</h4>
-                <form class="row g-3 py-3">
+                <h4 id="Abono_Title">Realizar abono</h4>
+                <form action="/AddAbono" method="post" class="row g-3 py-3">
                   <div class="col-md-6">
+                    <input type="text" class="form-control" id="Id_Venta_Abono" name="Id_Venta_Abono" hidden>
                     <label for="Nombre_cliente" class="form-label">Nombre del Cliente</label>
-                    <input type="text" class="form-control" id="Nombre_cliente">
+                    <input type="text" class="form-control" id="Nombre_cliente_Abono">
 
                     <label for="Nombre_vendedor" class="form-label">Nombre del Vendedor</label>
-                    <input type="number" class="form-control" id="Nombre_vendedor">
+                    <input type="text" class="form-control" id="Nombre_vendedor_Abono">
                   </div>
 
                   <div class="col-md-6">
                     <label for="Fecha_Abono" class="form-label">Fecha del abono</label>
-                    <input type="date" class="form-control" id="Fecha_Abono">
+                    <input type="date" class="form-control" id="Fecha_Abono" name="Fecha_Abono">
 
                     <label for="Monto_Abono" class="form-label">Monto a Abonar</label>
-                    <input type="number" class="form-control" id="Monto_Abono">
+                    <input type="number" class="form-control" id="Monto_Abono" name="Monto_Abono" step="0.01">
                   </div>
                   
                   <button type="submit" class="btn btn-success">Guardar</button>
@@ -142,13 +142,9 @@
             </div>                       
           </div>
         </div>
-        <div
-          id="panelHistorialAbonosUnico"
-          class="panel-flotante"
-          style="display: none"
-        >
+        <div id="panelHistorialAbonosUnico" class="panel-flotante" style="display: none">
           <div class="panel-content">
-            <h4>Historial de abonos</h4>
+            <h4 id="TitleHistorial">Historial de abonos</h4>
             <nav class="navbar bg-body-tertiary">
             </nav>
             <div style="max-height: 300px; overflow-y: auto">
@@ -185,7 +181,24 @@
       </div>
     </section>
 
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <script src="resources/js/script.js"></script>
     <script src="/resources/js/ScriptAbonos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <% if (typeof alert != "undefined") { %>
+      <script>
+        Swal.fire({
+          title: "<%= alertTitle %>",
+          text: "<%= alertMessage %>",
+          icon: "<%= alertIcon %>",
+          showConfirmButton: true,
+          timer: false,
+        }).then(() => {
+          window.location = "/<%= ruta %>";
+        });
+      </script>
+    <% } %>
+
   </body>
 </html>
